--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+locale: en-US
 domain: "djspacewhale.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://djspacewhale.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  djspacewhale
+
+mastodon:
+  - username: djspacewhale
+    instance: mathstodon.xyz
 
 # Build settings
 theme: minima
