--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ domain: "djspacewhale.github.io"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://djspacewhale.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  djspacewhale
-linkedin_username: garf
+linkedin_username: garf98
 
 mastodon:
   - username: djspacewhale
