--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Abstract Nonsense
-email: garrett.figueroa21@alumni.colostate.edu
+email: garrett.figueroa@gmail.com
 description: >- # this means to ignore newlines until "locale:"
   Howdy! This will be my personal website for assorted interests - math, music, 
   film, baking, bicycling, and whatever else I'd like to connect with folks about.
