--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,6 @@ defaults:
     layout: "posts"
 
 readme_index:
-  enabled:          true
+  enabled:          false
   remove_originals: false
   with_frontmatter: true
