What are categories of algebras over an equational theory?

--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,8 @@ readme_index:
   enabled:          false
   remove_originals: false
   with_frontmatter: true
+
+# SEO gobbledygook
+
+gems:
+    -jekyll-seo-tag
