"will be" -> "is"

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Abstract Nonsense
 email: garrett.figueroa@gmail.com
 description: >- # this means to ignore newlines until "locale:"
-  Howdy! This will be my personal website for assorted interests - math, music, 
+  Howdy! This is my personal website for assorted interests - math, music, 
   film, baking, bicycling, and whatever else I'd like to connect with folks about.
 locale: en-US
 domain: "djspacewhale.github.io"
