--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ linkedin_username: garf98
 mastodon:
   - username: djspacewhale
     instance: mathstodon.xyz
+rss: rss
 
 # Build settings
 #theme: minima
@@ -41,6 +42,7 @@ plugins:
   - jekyll-feed
   - jekyll-pdf-embed
   - jekyll-include-cache
+  - jekyll-simple-icons
 #  - jekyll-seo-tag
 
 # enabling plugin to use readme.md for index
